--- a/templates/report_incident.html
+++ b/templates/report_incident.html
@@ -6,11 +6,12 @@
 {% endblock %}
 
 {% block content %}
-<div class="main-content report-incident">
-  <div class="container">
-      <div class="card-icon">
-           <i class="fas fa-exclamation-triangle"></i>
-         </div>
+<div class="main-content">
+  <div class="report-container">
+      <div class="report-header">
+          <div class="card-icon">
+              <i class="fas fa-exclamation-triangle"></i>
+          </div>
     <h1 class="welcome-title text-center">Reportar Incidente</h1>
     <div class="content-wrapper">
       <!-- Sección del formulario -->
