--- a/templates/report_incident.html
+++ b/templates/report_incident.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="main-content">
+<div class="main-content report-incident">
   <div class="report-container">
       <div class="report-header">
           <div class="card-icon">
